--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
