--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
+    "mockjs": "^1.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
