--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-service": "^3.12.0",
+    "@vue/cli-service": "^4.5.13",
+    "crypto": "^1.0.1",
     "mockjs": "^1.1.0",
     "vue-template-compiler": "^2.6.10"
   },
