--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-service": "^4.5.13",
     "crypto": "^1.0.1",
     "mockjs": "^1.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
